--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -7,7 +7,7 @@
         <H1>States</H1>
         <UL>
           {% for state in states | sort(attribute='name') %}
-          <li>{{ state.id|e }}: <B>{{ state.name|e }}</B>/li>
+          <LI>{{ state.id|e }}: <B>{{ state.name|e }}</B></LI>
           {% endfor %}
         </UL>
     </BODY>
